2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Auto save is
	  only created after atomic undos.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Fixed Bug 529544 - Source editor should validate styles when
	  adding them & Bug 531014 - Syntax Highlighting: Style sheet
	  file has to be called [something]Style.xml.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implement
	  ISupportsProjectReload.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/AutoSave.cs:
	* MonoDevelop.SourceEditor/Counters.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Add some
	  counters.

2009-08-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: drop down
	  box (in quick navigation) now recognizes leave event and
	  deselects the selected item.

2009-08-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DynamicAbbrevHandler.cs: Added
	  abbrev word to the foundWords list.

2009-08-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DynamicAbbrevHandler.cs: fixed bug
	  in getwordbeforecaret

2009-08-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DynamicAbbrevHandler.cs: Replaced
	  the GetWordBeforeCaret with an own implementation.

2009-08-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DynamicAbbrevHandler.cs: fixed typo
	  in dynamic abbrev that caused a bug.

2009-08-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Changed dynamic abbrev
	  key to alt+/ 

2009-08-07  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor.addin.xml: