@@ -1,5 +1,10 @@
 2009-08-26  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs: Track
+	  API changes.
+
+2009-08-26  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.SourceEditor/SourceEditorView.cs: Auto save is
 	  only created after atomic undos.
 
